# tree-sitter-org

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.org  ROADMAP.org  binding.gyp  check.py  fuzz.py  grammar.js  leaf_errors.py  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  parser-checks.yml  release.yml
bindings/node/: binding.cc  binding_test.js
docs/plans/: ROADMAP_ARCHIVE.org  drawer-indent-block-plan.md  python-wrapper-accept-tree-sitter-structure.md  section-indent-block-plan.md
examples/: dynamic-blocks.org  macro-basic.org  showcase.python  showcase.tree-sitter
queries/: highlights.scm
src/: scanner.c
src/org_parser/: __init__.py  _node.py  _nodes.py
test/corpus/: clocks.txt  document.txt  drawers.txt  error_recovery.txt  fixed_width.txt  footnotes.txt  greater_blocks.txt  headings.txt  lesser_blocks.txt  lists.txt  markup.txt  planning.txt  scripts.txt  sections.txt  tables.txt  timestamps.txt
tests/: test_affiliated_keywords.py  test_babel_elements.py  test_block_elements.py  test_clock_elements.py  test_document.py  test_drawer_elements.py  test_element_repr.py  test_error_recovery.py  test_list_elements.py  test_repeat_elements.py  test_rich_text_objects.py  test_semantic.py  test_setters.py  test_string_repr.py  test_table_elements.py  test_timestamp.py  test_wrapper_io.py
tree-sitter-org/: .gitignore  grammar.js  package.json  tree-sitter.json
tree-sitter-org/queries/: highlights.scm
tree-sitter-org/src/: scanner.c
(+48 files in other folders)
