[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-org"
description = "Tree-sitter grammar for Org Mode syntax"
version = "0.23.6"
keywords = ["incremental", "parsing", "tree-sitter", "org"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.10"
license = "MIT"
readme = {file = "README.org", content-type = "text/plain"}

[project.urls]
Homepage = "https://github.com/idorobots/tree-sitter-org"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
